[metadata]
name = packer_py
version = 1.11.2.1
description = Python wrapper around invoking HashiCorp Packer (https://www.packer.io/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbast/packer-py
author = Daniel Bast
author_email = 2790401+dbast@users.noreply.github.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.9
setup_requires =
    setuptools-download

[update_settings]
depname = hashicorp/packer
datasource = github-releases
version = 1.11.2
url_regex = ""

[setuptools_download]
download_scripts =
    [packer]
    group = packer-binary
    marker = sys_platform == "linux" and platform_machine == "armv6hf"
    marker = sys_platform == "linux" and platform_machine == "armv7l"
    url = https://releases.hashicorp.com/packer/1.11.2/packer_1.11.2_linux_arm.zip
    sha256 = 29c8cb058b6d0d68c84e4a322c4abb1b11bdfe926d9a16ccbf4e026b8df75e49
    extract = zip
    extract_path = packer
    [packer]
    group = packer-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://releases.hashicorp.com/packer/1.11.2/packer_1.11.2_linux_arm64.zip
    sha256 = dd296d743dd4593304307583cff5290bba9b868fc2b0b605b64566f8141ca728
    extract = zip
    extract_path = packer
    [packer]
    group = packer-binary
    marker = sys_platform == "linux" and platform_machine == "ppc64le"
    url = https://releases.hashicorp.com/packer/1.11.2/packer_1.11.2_linux_ppc64le.zip
    sha256 = ce00800a2b16bd964734b52714fe93d68889bb29acfddbe2f0fb68b2efe8b2b2
    extract = zip
    extract_path = packer
    [packer]
    group = packer-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://releases.hashicorp.com/packer/1.11.2/packer_1.11.2_linux_amd64.zip
    sha256 = ced13efc257d0255932d14b8ae8f38863265133739a007c430cae106afcfc45a
    extract = zip
    extract_path = packer
    [packer]
    group = packer-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://releases.hashicorp.com/packer/1.11.2/packer_1.11.2_darwin_arm64.zip
    sha256 = b89f4944cca27839922a397248b94fc20d92acf15933bb36d58eb6d1283dc254
    extract = zip
    extract_path = packer
    [packer]
    group = packer-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://releases.hashicorp.com/packer/1.11.2/packer_1.11.2_darwin_amd64.zip
    sha256 = 107c4334b136ffb5b884bac87f2ef6620f15df7d1d0a646db20b8054f9c607fe
    extract = zip
    extract_path = packer
    [packer.exe]
    group = packer-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://releases.hashicorp.com/packer/1.11.2/packer_1.11.2_windows_amd64.zip
    sha256 = 43facee0f16a03c26bbb713c6904b39568ae320d02b875fe18436e93068a712e
    extract = zip
    extract_path = packer.exe
